fixed project spacing

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -11,9 +11,9 @@
     color: black;
     margin: 20px 5px 20px 5px;
     padding: 10px;
-    padding-top: 10%;
     height: 400px;
     position: relative;
+    padding-top: 0%;
 }
 
 .projectImage {
